Improve naming and formatting and fix overlapping partition line.

--- a/animations/src/App.css
+++ b/animations/src/App.css
@@ -188,7 +188,3 @@
 .yb-button-text {
   padding-left: 5px;
 }
-
-tspan.highlighted {
-	background: yellow;
-}
